<resources>
    <string name="app_name">CSIR PEHCHAAN</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Logo">Logo</string>
    <string name="Login">Login</string>
    <string name="ID_Number">I.D.Number</string>
    <string name="Password">Password</string>
    <string name="LoginButton">Login</string>
    <string name="logo_content_description">Logo Content</string>
    <string name="full_name">Full Name: %1$s</string>
    <string name="designation">Designation: %1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="mobile">Mobile: %1$s</string>
    <string name="address">Address: %1$s</string>
    <string name="verification_status">Verification Status: %1$s</string>
    <string name="photo_description">Photo</string>

<string name="emailLogin">Enter Email I.D.</string>
    <string name="lorem_ipsum">Lorem</string>
    <string name="dp_Name">D.P.Name</string>
    <string name="logo_description" />
    <string name="qrcode_description" />
    <string name="verification">Verification:</string>

    <string name="empty_string"></string>
    <string name="https_www_linkedin_com_in_kumar_r_a53a03117">https://www.linkedin.com/in/kumar-r-a53a03117/</string>
    <string name="csir_hindi">सीएसआईआर पहचान</string>
    <string name="kr_summary">CSIR PEHCHAAN is a digital identification card system tailored for CSIR Labs\' staff. This project digitizes conventional ID cards, granting employees swift access to their identification details via a digital platform. By harnessing modern technology, CSIR PEHCHAAN bolsters security and efficiency within CSIR Labs, delivering a seamless and convenient identification solution. The project was undertaken by Kumar Ravi under the guidance of Dr. Neeraj Bhanot.</string>
    <string name="need_of_project">Need of Project</string>
    <string name="need_of_projec">This project is driven by the imperative to eradicate the complexities associated with traditional ID card production and physical distribution. Adopting a paperless identification approach, CSIR PEHCHAAN strives to simplify the identification process while promoting environmental sustainability. By digitizing identification procedures, the system not only enhances convenience and security for employees but also contributes to environmental conservation. This shift away from paper-based ID cards will save a significant number of trees from being cut down for paper production.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp">OTP</string>
    <string name="proceed">Proceed</string>
    <string name="dr_neeraj_bhanot_summary">Dr. Neeraj Bhanot currently serves as a Scientist and Assistant Professor (AcSIR) at CSIR-National Physical Laboratory, affiliated with the Ministry of Science &amp; Technology, New Delhi. He holds a PhD in Industrial Engineering from IIT Delhi and specializes in research fields including Sustainability Assessment, Performance Benchmarking, and the practical applications of advanced technologies such as the Internet of Things, Big Data Analytics, and Artificial Intelligence..</string>

    <string name="totp">TOTP</string>

    <string name="emergeny_no">Emergeny No.</string>
    <string name="linkedin_profile_url">https://www.linkedin.com/in/kumar-r-a53a03117/</string>
    <string name="summary_text">Kumar Ravi possesses a robust technological background, demonstrating proficiency in languages such as C++, React, Python, and Java. He has accomplished coursework in computer networks, operating systems, and cloud computing. With a problem-solving-oriented focus, he has garnered 5-star ratings in C++, SQL, and Problem Solving on platforms like HackerRank.</string>
    <string name="kumar_ravi">Kumar Ravi</string>
    <string name="dr_neeraj_bhanot">Dr. Neeraj Bhanot</string>
    <string name="en_hin">Aa/अ</string>
    <string name="photo">Photo</string>
    <string name="lab_name">Lab Name</string>
    <string name="enter_your_totp_code_from_microsoft_authenticator">Enter your TOTP code from Microsoft Authenticator</string>
    <string name="update_user_details">Update User Details</string>


</resources>